# dhgaifactory3.5

./: ._dhg-ai-factory-ui  .dockerignore  .env.example  .env.save  .gitignore  .replit  CLAUDE.md  LANGGRAPH_DEPLOYMENT_STATUS.md  MainLayout.jsx  Makefile  PROJECT_CONTEXT.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  WARP.md  architect_agentV3.py  cme_intake_template.csv  cme_research_proxy.py  deploy_remote.sh  deploy_to_remote.sh  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  docker-compose.yml.bak  findings.md  ingest_helper.sh  langgraph_proxy.py  main.py  progress.md  progress_v1.md  pyrightconfig.json  pytest.ini  replit.md  requirements.txt  setup_autonomous_ssh.sh  setup_ssh_keys.sh  start.sh  task_plan.md  task_plan_v1.md  test_ws_client.py  (+1 more)
langgraph-dev/langsmith-mcp-server/: Dockerfile  README.md  pyproject.toml
langgraph-dev/langsmith-mcp-server/src/: server.py
langgraph_workflows/dhg-agents-cloud/: .env.example  Dockerfile  FILE_SAVING_FEATURE.md  ORCHESTRATOR_GRAPHS.md  OUTPUT_FORMAT_IMPLEMENTATION.md  docker-compose.yml  langgraph.json  pyproject.toml  pytest.ini  requirements.txt  runtime.env  test_output_format.py  venv
langgraph_workflows/dhg-agents-cloud/outputs/: gap_report_chronic_cough_treatment_20260124_180911.txt
langgraph_workflows/dhg-agents-cloud/schemas/: registry-api-v1.json
langgraph_workflows/dhg-agents-cloud/src/: agent.py  agent.py.pre_fix  citation_checker_agent.py  clinical_practice_agent.py  compliance_review_agent.py  curriculum_design_agent.py  drive_sync_hook.py  enhanced_agent_graph.py  extract_topic.py  feedback_loop.py  gap_analysis_agent.py  grant_writer_agent.py  infisical_secrets.py  intake_prefill_agent.py  learning_objectives_agent.py  marketing_plan_agent.py  needs_assessment_agent.py  orchestrator.py  prose_quality_agent.py  pubmed_client.py  registry_agent.py  research_agent.py  research_protocol_agent.py  secrets.py  tracing.py  (+2 more)
(+1168 files in other folders)
