[project]
name = "langsmith-mcp-server"
version = "1.0.0"
description = "MCP server for LangSmith Cloud integration with Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "langsmith>=0.1.140",
    "httpx>=0.27.0",
]

[project.scripts]
langsmith-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
